--- a/cryptocurrency/website/crypto/templates/base.html
+++ b/cryptocurrency/website/crypto/templates/base.html
@@ -129,11 +129,11 @@
                 <div class="col-lg-4">
                     <h3>Quick Links</h3>
                     <ul class="icon-list icon-line">
-                        <li><a href="{% url 'home' %}">Home</a></li>
-                        <li><a href="{% url 'investment' %}">Investment</a></li>
-                        <li><a href="{% url 'contact' %}">Contact Us</a></li>
-                        <li><a href="{% url 'faq' %}">Faq</a></li>
-                        <li><a href="{% url 'terms' %}">Terms and Conditions</a></li>
+                        <li><a href="{% url 'home' %}">HOME</a></li>
+                        <li><a href="{% url 'investment' %}">INVESTMENT</a></li>
+                        <li><a href="{% url 'contact' %}">CONTACT US</a></li>
+                        <li><a href="{% url 'faq' %}">FAQ</a></li>
+                        <li><a href="{% url 'terms' %}">TERMS AND CONDITIONS</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-4">
