--- a/cryptocurrency/website/crypto/templates/crypto/home.html
+++ b/cryptocurrency/website/crypto/templates/crypto/home.html
@@ -298,6 +298,61 @@
                                 </div>
                             </div>
                         </li>
+                        <li>
+                            <div class="cnt-box cnt-box-testimonials-bubble">
+                                <p>
+                                    میں بہت خوش ہوں کہ میں اس کمپنی Apexfortitude سے رقم نکالنے میں کامیاب رہا۔ وہ واقعی 
+                                    محفوظ ہیں۔ 
+                                </p>
+                                <div class="thumb-bar">
+                                    <p>
+                                        <span>Bilal Ahmad</span>
+                                        <span>Pakistan</span>
+                                    </p>
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="cnt-box cnt-box-testimonials-bubble">
+                                <p>
+                                    Oh my God, I can't believe such company still do exist. Everyone make use of Apex-fortitude company they smooth, 
+                                    fast and reliable
+                                </p>
+                                <div class="thumb-bar">
+                                    <p>
+                                        <span>Branka zovmira</span>
+                                        <span>Germany</span>
+                                    </p>
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="cnt-box cnt-box-testimonials-bubble">
+                                <p>
+                                    A única coisa que posso dizer é que estou muito feliz por encontrar esta plataforma altamente segura
+                                </p>
+                                <div class="thumb-bar">
+                                    <p>
+                                        <span>Emmanuel Carlos</span>
+                                        <span>Brazil</span>
+                                    </p>
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="cnt-box cnt-box-testimonials-bubble">
+                                <p>
+                                    Najbolja platforma 2024. obilježava točno 1 godinu koliko zarađujem od ove tvrtke. 
+                                    I ja bih volio dijeliti slike i videozapise
+                                </p>
+                                <div class="thumb-bar">
+                                    <p>
+                                        <span>Mikael jakov</span>
+                                        <span>Croatia</span>
+                                    </p>
+                                </div>
+                            </div>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -624,7 +679,7 @@
                         </div>
                     </div>
                     <hr class="space-sm" />
-                    <a href="">View Packages <i class="fa-solid fa-angles-right"></i></a>
+                    <a href="{% url 'investment' %}">View Packages <i class="fa-solid fa-angles-right"></i></a>
                 </div>
             </div>
             <hr class="space" />
