--- a/cryptocurrency/website/crypto/templates/crypto/home.html
+++ b/cryptocurrency/website/crypto/templates/crypto/home.html
@@ -361,8 +361,8 @@
 
     <section class="section-base">
         <div class="container">
-            <div class="col-lg-6" style="padding-top: 0; padding-bottom: 40px;" >
-                <div class="col-lg-6">
+            <div class="row" data-anima="fade-bottom" data-time="1000" style="padding-top: 0;">
+                <div class="col-lg-6" style="padding-top: 0; padding-bottom: 40px; padding-left: 0;" >
                     <div class="title">
                         <h2>How Apex-Fortitude generates profits</h2>
                         <p>Exclusive benefits</p>
@@ -370,7 +370,7 @@
                     <hr class="space-sm" />
                     <ul class="accordion-list">
                         <li>
-                            <a href="#"><i class="fa-solid fa-angle-right" style="margin-right: 40px;"></i> Crypto mining and Trading</a>
+                            <a href="#"><i class="fa-solid fa-angle-right" style="margin-right: 10px;"></i> Crypto mining and Trading</a>
                             <div class="content">
                                 <p>
                                     To put it simply, trading is the buying and selling of financial assets.
@@ -423,7 +423,7 @@
                         </li>
 
                         <li>
-                            <a href="#"><i class="fa-solid fa-angle-right"style="margin-right: 40px;" ></i> Crude oil trading</a>
+                            <a href="#"><i class="fa-solid fa-angle-right"style="margin-right: 10px;" ></i> Crude oil trading</a>
                             <div class="content">
                                 <p>
                                     Crude oil trading offers excellent opportunities to profit in nearly all market
@@ -455,7 +455,7 @@
                             </div>
                         </li>
                         <li>
-                            <a href="#"><i class="fa-solid fa-angle-right" style="margin-right: 40px;"></i> Agricultural trades and investment</a>
+                            <a href="#"><i class="fa-solid fa-angle-right" style="margin-right: 10px;"></i> Agricultural trades and Investment</a>
                             <div class="content">
                                 <p>
                                     Trade plays a crucial role in delivering food and clothing to consumers
@@ -582,7 +582,7 @@
                             </div>
                         </li>
                         <li>
-                            <a href="#"><i class="fa-solid fa-angle-right" style="margin-right: 40px;"></i>Gold mining and Investment</a>
+                            <a href="#"><i class="fa-solid fa-angle-right" style="margin-right: 10px;"></i>Gold mining and Investment</a>
                             <div class="content">
                                 <p>
                                     Gold investment are the most suitable choice if you plan to stay invested for a period of 5 years or longer. 
@@ -592,7 +592,7 @@
                             </div>
                         </li>
                         <li>
-                            <a href="#"><i class="fa-solid fa-angle-right" style="margin-right: 40px;"></i>Real estate management</a>
+                            <a href="#"><i class="fa-solid fa-angle-right" style="margin-right: 10px;"></i>Real estate management</a>
                             <div class="content">
                                 <p>
                                     Real estate investing involves buying a property and selling it later for a profit, or owning property 
@@ -603,7 +603,7 @@
                             </div>
                         </li>
                         <li>
-                            <a href="#"><i class="fa-solid fa-angle-right" style="margin-right: 40px;"></i>Non-farm payrolls (NFP)</a>
+                            <a href="#"><i class="fa-solid fa-angle-right" style="margin-right: 10px;"></i>Non-farm payrolls (NFP)</a>
                             <div class="content">
                                 <p>
                                     The non-farm payrolls measure the number of people currently in employment in the US and are released 
@@ -627,7 +627,7 @@
                         <p>Exclusive transactions</p>
                     </div>
                     <center>
-                        <iframe src="https://www.btcwidget.info/widget/liveTx/%23e4edf3/%23e4edf3/%23ffffff/%23004767/%23ffffff/400/400/7" width="380" height="400" frameBorder="0" scrolling="no"></iframe>
+                        <iframe src="https://www.btcwidget.info/widget/liveTx/%23e4edf3/%23e4edf3/%23ffffff/%23004767/%23ffffff/350/400/7" width="350" height="400" frameBorder="0" scrolling="no"></iframe>
                     </center> 
                 </div>
             </div>
