--- a/cryptocurrency/website/crypto/templates/email/withdrawalmail.html
+++ b/cryptocurrency/website/crypto/templates/email/withdrawalmail.html
@@ -13,7 +13,7 @@
     <div class="container">
         <div class="row">
             <div class="col-12">
-                <div style="background-color: #3B3D2E; height: 15vh;">
+                <div style="background-color: #3B3D2E; height: 15vh; padding: 10px 0;">
                     <img src="{% static 'media/logos.png' %}" alt=""style="display: block; margin: 0 auto; padding-top: 20px; height: 6vh;">
                     <center><h3 style="color: white; padding-bottom: 5px;">Withdrawal Notification</h3></center>
                 </div>
@@ -21,7 +21,7 @@
                     <p style="font-size: larger;">Dear <strong>{{user}}</strong></p>
                     <p style="font-size: larger;">
                         Your requested withdraw of ${{amount}} has been approved
-                        successfully and has be sent to your crypto wallet. Kindly check your account to 
+                        successfully and has be sent to your crypto wallet. Kindly check your account
                         to verify this.
                     </p>
                     <p style="font-size: larger;">
@@ -35,7 +35,7 @@
                 <div style="background-color: #3B3D2E; height: 15vh; margin-top: 15px; padding-top: 15px;">
                     <center><p style="text-transform: uppercase; color: white;">Apex-fortitude</p></center>
                     <center><p style="color: white;">Magleby Langeland, Denmark.</p></center>
-                    <center><h6 style="color: white;">&#169;2023Apexfortitude, inc. All rights reserved</h6></center>
+                    <center><h6 style="color: white;"><script>document.write(new Date().getFullYear())</script>&#169;Apexfortitude, inc. All rights reserved</h6></center>
                 </div>
             </div>
         </div>
