--- a/cryptocurrency/website/crypto/templates/base.html
+++ b/cryptocurrency/website/crypto/templates/base.html
@@ -47,12 +47,12 @@
     <!-- Smartsupp Live Chat script -->
     <script type="text/javascript">
         var _smartsupp = _smartsupp || {};
-        _smartsupp.key = 'f2cba6ba79fdcdff48af5332e03c7b15b0bbb2b5';
+        _smartsupp.key = '2c570829c8d2b65f2775726a69dc42ee0446e51d';
         window.smartsupp||(function(d) {
-        	var s,c,o=smartsupp=function(){ o._.push(arguments)};o._=[];
-        	s=d.getElementsByTagName('script')[0];c=d.createElement('script');
-        	c.type='text/javascript';c.charset='utf-8';c.async=true;
-        	c.src='https://www.smartsuppchat.com/loader.js?';s.parentNode.insertBefore(c,s);
+        var s,c,o=smartsupp=function(){ o._.push(arguments)};o._=[];
+        s=d.getElementsByTagName('script')[0];c=d.createElement('script');
+        c.type='text/javascript';c.charset='utf-8';c.async=true;
+        c.src='https://www.smartsuppchat.com/loader.js?';s.parentNode.insertBefore(c,s);
         })(document);
     </script>
 
@@ -156,7 +156,7 @@
         </div>
         <div class="footer-bar">
             <div class="container">
-                <span>© <script>document.write(new Date().getFullYear())</script><a href="">apexfortitude.com</a></span>
+                <span><script>document.write(new Date().getFullYear())</script>©<a href="">apexfortitude.com</a></span>
                 <span><a href="{% url 'contact' %}">Contact us</a> | <a href="{% url 'terms' %}">Terms &
                         Conditions</a></span>
             </div>
