--- a/cryptocurrency/website/crypto/templates/crypto/home.html
+++ b/cryptocurrency/website/crypto/templates/crypto/home.html
@@ -15,13 +15,13 @@
                     </h3>
                     <ul class="slider" data-options="arrows:false,nav:false,autoplay:3000,controls:out">
                         <li>
-                            <h1 class="text-uppercase">Put your effort exactly where your business needs it</h1>
+                            <h1 class="text-uppercase">Focus your efforts precisely on the specific needs of your business.</h1>
                         </li>
                         <li>
-                            <h1 class="text-uppercase">Invest Earn and smile, we are here for your financial assistance</h1>
+                            <h1 class="text-uppercase">Invest, Earn, and Experience Peace of mind; we're here to support you with your financial needs</h1>
                         </li>
                         <li>
-                            <h1 class="text-uppercase">Have the courage to follow your heart and intuition.</h1>
+                            <h1 class="text-uppercase">Discover the strength to trust both your heart and intuition.</h1>
                         </li>
                     </ul>
                     <p>
@@ -146,6 +146,21 @@
                                     At Apex-fortitude, we have been continuously transforming the
                                     traditional money management industry, in order to open the financial markets to
                                     everyone, everywhere.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="grid-item">
+                        <div class="cnt-box cnt-box-info boxed d-lg-none" data-href="#">
+                            <a href="#" class="img-box"><img src="{% static 'media/client5.jpg' %}"
+                                    alt=""  style="height: 30vh; object-fit: cover;"/></a>
+                            <div class="caption">
+                                <h2>At Apex-Fortitude</h2>
+                                <p>
+                                    We precisely provide value in those areas that matter. We assist portfolio
+                                    companies in developing and executing strategic growth, building the board
+                                    and executive management team, exploring capitalization structures, pursuing
+                                    growth mergers and acquisitions, and enhancing market presence.
                                 </p>
                             </div>
                         </div>
