Transfer  Email Update

--- a/cryptocurrency/website/crypto/templates/email/commision.html
+++ b/cryptocurrency/website/crypto/templates/email/commision.html
@@ -35,7 +35,7 @@
                 <div style="background-color: #3B3D2E; height: 15vh; margin-top: 15px; padding-top: 15px;">
                     <center><p style="text-transform: uppercase; color: white;">Apex-fortitude</p></center>
                     <center><p style="color: white;">Magleby Langeland, Denmark.</p></center>
-                    <center><h6 style="color: white;"><script>document.write(new Date().getFullYear())</script>&#169;Apexfortitude, inc. All rights reserved</h6></center>
+                    <center><h6 style="color: white;">2024&#169;Apexfortitude, inc. All rights reserved</h6></center>
                 </div>
             </div>
         </div>
