--- a/cryptocurrency/website/crypto/templates/email/recievertransfer.html
+++ b/cryptocurrency/website/crypto/templates/email/recievertransfer.html
@@ -19,8 +19,7 @@
                 </div>
                 <div style="padding: 10px 5px;">
                     <p style="font-size: larger;">Dear <strong>{{referer}}</strong></p>
-                    <p style="font-size: larger;">
-                        Your recieved an internal funds transfer successfully check below for details of transaction.<br>
+                    <p style="font-size: larger;">You have successfully recieved an internal funds transfer. Check belowv for details of transaction<br>
                         Amount:{{amount}} <br>
                         Username:{{user}}
                     </p>
@@ -35,7 +34,7 @@
                 <div style="background-color: #3B3D2E; height: 15vh; margin-top: 15px; padding-top: 15px;">
                     <center><p style="text-transform: uppercase; color: white;">Apex-fortitude</p></center>
                     <center><p style="color: white;">Magleby Langeland, Denmark.</p></center>
-                    <center><h6 style="color: white;"><script>document.write(new Date().getFullYear())</script>&#169;Apexfortitude, inc. All rights reserved</h6></center>
+                    <center><h6 style="color: white;">2024&#169;Apexfortitude, inc. All rights reserved</h6></center>
                 </div>
             </div>
         </div>
