--- a/cryptocurrency/website/crypto/templates/crypto/dashboard.html
+++ b/cryptocurrency/website/crypto/templates/crypto/dashboard.html
@@ -30,7 +30,7 @@
               </div>
             </div>
             <div class="c-chart-wrapper mt-3 mx-3" style="height:70px;">
-              <p style="font-size: small;">Available balance are withdrawable balance while  system  earning is your daily profit earned.
+              <p style="font-size: small;">Available balance is withdrawable balance; system earnings are your daily profits
               </p>
               <!--<canvas class="chart" id="card-chart1" height="70"></canvas>-->
             </div>
@@ -38,7 +38,7 @@
         </div>
         <!-- /.col-->
         <div class="col-sm-6 col-lg-3">
-          <div class="card mb-4 text-white bg-info">
+          <div class="card mb-4 dashboard_bg">
             <div class="card-body pb-0 d-flex justify-content-between align-items-start">
               <div>
                 <div class="fs-4 fw-semibold">{% if balance is None %}$0{% else %}${{confirm}}{% endif %}<span class="fs-6 fw-normal">
@@ -65,7 +65,7 @@
         </div>
         <!-- /.col-->
         <div class="col-sm-6 col-lg-3">
-          <div class="card mb-4 text-white bg-warning">
+          <div class="card mb-4 dashboard_bg">
             <div class="card-body pb-0 d-flex justify-content-between align-items-start">
               <div>
                 <div class="fs-4 fw-semibold">{% if balance is None %}$0{% else %}${{invest}}{% endif %}<span class="fs-6 fw-normal">
@@ -92,7 +92,7 @@
         </div>
         <!-- /.col-->
         <div class="col-sm-6 col-lg-3">
-          <div class="card mb-4 text-white bg-danger">
+          <div class="card mb-4 dashboard_bg">
             <div class="card-body pb-0 d-flex justify-content-between align-items-start">
               <div>
                 <div class="fs-4 fw-semibold">{% if balance is None %}$0{% else %}${{withdraw}}{% endif %}<span class="fs-6 fw-normal">
