--- a/cryptocurrency/website/crypto/templates/base2.html
+++ b/cryptocurrency/website/crypto/templates/base2.html
@@ -39,7 +39,8 @@
               <i class="fa-solid fa-clock-rotate-left nav-icon"></i> Withdrawal</a>
             </li>
             <!-- Dropdown for withdrawal -->
-            <li class="nav-group"><a class="nav-link nav-group-toggle" href="#">
+            
+            <li class="nav-group"><a href="#">
               <i class="fa-solid fa-money-bill-transfer nav-icon"></i> Transactions
               <ul class="nav-group-items">
                 <li class="nav-item"><a class="nav-link" href="{% url 'transaction' %}">
