--- a/cryptocurrency/website/crypto/templates/base2.html
+++ b/cryptocurrency/website/crypto/templates/base2.html
@@ -40,7 +40,7 @@
             </li>
             <!-- Dropdown for withdrawal -->
             
-            <li class=""><a class="nav-link nav-group-toggle" href="#">
+            <li class="nav-group nav-link nav-group-toggle">
               <i class="fa-solid fa-money-bill-transfer nav-icon"></i> Transactions
               <ul class="nav-group-items">
                 <li class="nav-item"><a class="nav-link" href="{% url 'transaction' %}">
