--- a/cryptocurrency/website/crypto/templates/base2.html
+++ b/cryptocurrency/website/crypto/templates/base2.html
@@ -39,9 +39,11 @@
               <i class="fa-solid fa-clock-rotate-left nav-icon"></i> Withdrawal</a>
             </li>
             <!-- Dropdown for withdrawal -->
-            
-            <li class="nav-group nav-link nav-group-toggle">
-              <i class="fa-solid fa-money-bill-transfer nav-icon"></i> Transactions
+
+            <li class="nav-group"><a class="nav-link nav-group-toggle" href="#">
+                <svg class="nav-icon">
+                  <use xlink:href="vendors/@coreui/icons/svg/free.svg#cil-cursor"></use>
+                </svg> Transaction</a>
               <ul class="nav-group-items">
                 <li class="nav-item"><a class="nav-link" href="{% url 'transaction' %}">
                   <i class="fa-solid fa-money-bill-transfer nav-icon"></i>All Transaction</a>
@@ -65,7 +67,9 @@
             <li class="nav-title">Settings</li>
             <!-- Dropdown for account -->
             <li class="nav-group"><a class="nav-link nav-group-toggle" href="#">
-              <i class="fa-solid fa-users"></i> Account
+              <svg class="nav-icon">
+                <use xlink:href="vendors/@coreui/icons/svg/free.svg#cil-cursor"></use>
+              </svg> Account</a>
               <ul class="nav-group-items">
                 <li class="nav-item"><a class="nav-link" href="{% url 'details' %}">
                   <i class="fa-solid fa-user nav-icon"></i> My Profile</a>
