--- a/cryptocurrency/website/crypto/templates/base2.html
+++ b/cryptocurrency/website/crypto/templates/base2.html
@@ -36,23 +36,23 @@
                 <i class="fa-solid fa-sack-dollar nav-icon"></i> Deposit</a>
             </li>
             <li class="nav-item"><a class="nav-link" href="{% url 'withdrawal' %}">
-              <i class="fa-solid fa-clock-rotate-left nav-icon"></i> Withdrawal</a>
+              <i class="fa-solid fa-money-bill-transfer nav-icon"></i> Withdrawal</a>
             </li>
             <!-- Dropdown for withdrawal -->
 
             <li class="nav-group"><a class="nav-link nav-group-toggle" href="#">
                 <svg class="nav-icon">
                   <use xlink:href="vendors/@coreui/icons/svg/free.svg#cil-cursor"></use>
-                </svg> Transaction</a>
+                </svg><i class="fa-solid fa-clock-rotate-left nav-icon"></i> Transaction</a>
               <ul class="nav-group-items">
                 <li class="nav-item"><a class="nav-link" href="{% url 'transaction' %}">
-                  <i class="fa-solid fa-money-bill-transfer nav-icon"></i>All Transaction</a>
+                  <i class="fa-solid fa-money-bill-transfer nav-icon"></i> All Transaction</a>
                 </li>
                 <li class="nav-item"><a class="nav-link" href="{% url 'withdrawal' %}">
-                  <i class="fa-solid fa-money-bill-transfer nav-icon"></i>Deposit</a>
+                  <i class="fa-solid fa-money-bill-transfer nav-icon"></i> Deposit</a>
                 </li>
                 <li class="nav-item"><a class="nav-link" href="{% url 'withdrawal' %}">
-                  <i class="fa-solid fa-money-bill-transfer nav-icon"></i>Withdrawal</a>
+                  <i class="fa-solid fa-money-bill-transfer nav-icon"></i> Withdrawal</a>
                 </li>
               </ul>
             </li>
@@ -69,7 +69,7 @@
             <li class="nav-group"><a class="nav-link nav-group-toggle" href="#">
               <svg class="nav-icon">
                 <use xlink:href="vendors/@coreui/icons/svg/free.svg#cil-cursor"></use>
-              </svg> Account</a>
+              </svg><i class="fa-solid fa-users nav-icon"></i> Account</a>
               <ul class="nav-group-items">
                 <li class="nav-item"><a class="nav-link" href="{% url 'details' %}">
                   <i class="fa-solid fa-user nav-icon"></i> My Profile</a>
