--- a/cryptocurrency/website/crypto/templates/crypto/withdrawalhistory.html
+++ b/cryptocurrency/website/crypto/templates/crypto/withdrawalhistory.html
@@ -19,7 +19,7 @@
                 <tr>
                 <th scope="col">SN</th>
                 <th scope="col">Amount</th>
-                <th scope="col">Currency</th>
+                <th scope="col">Date</th>
                 <th scope="col">Status</th>
                 </tr>
             </thead>
@@ -28,7 +28,7 @@
                 <tr>
                 <th scope="row">{{forloop.counter}}</th>
                 <td>{{datas.amount}}</td>
-                <td>{{datas.currency}}</td>
+                <td>{{datas.date_created.date}}</td>
                 {% if datas.status == True %}
                 <td><i class="fa-solid fa-circle-check" style="color: green;"></i> Confirmed</td>   
                 {% else %}
