--- a/cryptocurrency/website/crypto/templates/base2.html
+++ b/cryptocurrency/website/crypto/templates/base2.html
@@ -41,9 +41,7 @@
             <!-- Dropdown for withdrawal -->
 
             <li class="nav-group"><a class="nav-link nav-group-toggle" href="#">
-                <svg class="nav-icon">
-                  <use xlink:href="vendors/@coreui/icons/svg/free.svg#cil-cursor"></use>
-                </svg><i class="fa-solid fa-clock-rotate-left"></i> Transaction</a>
+                <i class="fa-solid fa-clock-rotate-left nav-icon"></i> Transaction</a>
               <ul class="nav-group-items">
                 <li class="nav-item"><a class="nav-link" href="{% url 'transaction' %}">
                   <i class="fa-solid fa-money-bill-transfer nav-icon"></i> All Transaction</a>
@@ -67,9 +65,7 @@
             <li class="nav-title">Settings</li>
             <!-- Dropdown for account -->
             <li class="nav-group"><a class="nav-link nav-group-toggle" href="#">
-              <svg class="nav-icon">
-                <use xlink:href="vendors/@coreui/icons/svg/free.svg#cil-cursor"></use>
-              </svg><i class="fa-solid fa-users"></i> Account</a>
+              <i class="fa-solid fa-users nav-icon"></i> Account</a>
               <ul class="nav-group-items">
                 <li class="nav-item"><a class="nav-link" href="{% url 'details' %}">
                   <i class="fa-solid fa-user nav-icon"></i> My Profile</a>
