--- a/cryptocurrency/website/crypto/templates/base2.html
+++ b/cryptocurrency/website/crypto/templates/base2.html
@@ -46,10 +46,10 @@
                 <li class="nav-item"><a class="nav-link" href="{% url 'transaction' %}">
                   <i class="fa-solid fa-money-bill-transfer nav-icon"></i> All Transaction</a>
                 </li>
-                <li class="nav-item"><a class="nav-link" href="{% url 'withdrawal' %}">
+                <li class="nav-item"><a class="nav-link" href="{% url 'deposithistory' %}">
                   <i class="fa-solid fa-money-bill-transfer nav-icon"></i> Deposit</a>
                 </li>
-                <li class="nav-item"><a class="nav-link" href="{% url 'withdrawal' %}">
+                <li class="nav-item"><a class="nav-link" href="{% url 'withdrawalhistory' %}">
                   <i class="fa-solid fa-money-bill-transfer nav-icon"></i> Withdrawal</a>
                 </li>
               </ul>
