--- a/cryptocurrency/website/crypto/templates/base2.html
+++ b/cryptocurrency/website/crypto/templates/base2.html
@@ -24,7 +24,7 @@
       </head>
       <body>
         <div class="sidebar sidebar-dark sidebar-fixed" id="sidebar">
-          <div class="sidebar-brand d-none d-md-flex">
+          <div class="sidebar-brand  d-md-flex">
             <a href="{% url 'home' %}"><img class="sidebar-brand-full" src="{% static 'media/logos.png' %}" style="height: 50px;" alt="logo"/></a>
           </div>
           <ul class="sidebar-nav" data-coreui="navigation" data-simplebar="">
@@ -99,8 +99,10 @@
                   <a href="{% url 'deposit' %}" class="px-3" ><i class="fa-solid fa-right-to-bracket" style="color: green;" ></i></a>
                   <a href="{% url 'withdrawal' %}"><i class="fa-solid fa-right-from-bracket" style="color: red;"></i></a>
                 </li>
-            
-                <li class="nav-item dropdown"><a class="nav-link py-0" data-coreui-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
+
+                <!-- message notification -->
+
+                <li class="nav-item dropdown" id="bell"><a class="nav-link py-0" data-coreui-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
                     <div class="avatar avatar-md"><i class="fa-regular fa-bell"><sup style="background-color: red; border-radius: 50%; color: white; padding: 2px 3px; font-size: x-small;">{% if num is None %}0{% else %}{{num}}{% endif %}</sup></i></div>
                   </a>
                   <div class="dropdown-menu dropdown-menu-end pt-0">
@@ -108,9 +110,13 @@
                       <div class="fw-semibold" style="color: black ; padding-bottom: 10px;">Messages</div>
                     </div>
                     {% for d in item %}
-                    <div class="dropdown" style="padding-left: 10px;">
-                      <p style="font-weight: bold; text-transform: uppercase; margin: 0;">{{d.subject}}<span style="float: right; padding-right: 10px; ">{{d.date_created|date:'M D, Y'}}</span></p>
-                      <p style="font-size: 150;">{{d.message}}</p>
+                    <div class="dropdown" style="padding-left: 10px;" id="msg{{d.pk}}">
+                      <div>
+                        <p style="font-weight: bold; text-transform: uppercase; margin: 0;">{{d.subject}}</p>
+                        <span style="float: right; padding-right: 10px;"><i class="fa-solid fa-trash" id="{{d.pk}}" style="color: red;"></i></span>
+                        <small style="font-weight: bold;">({{d.date_created|date:'M D, Y'}})</small>
+                      </div>
+                      <p class="message" style="font-size: 150;">{{d.message}}</p>  
                     </div> 
                     <hr>
                     {% endfor %}
@@ -132,6 +138,38 @@
             <div><script>document.write(new Date().getFullYear())</script>©Apex-Fortitude All right reserved.</div>
           </footer>
         </div>
+
+        
+        <script>
+          var token =  '{{csrf_token}}'
+          const bell = document.getElementById('bell')
+          const del = document.querySelectorAll('.fa-trash')
+          bell.addEventListener('click', (e)=>{
+            e.stopPropagation()
+          })
+          del.forEach((e)=>{
+            e.addEventListener('click', (d)=>{
+              $.ajax({
+                url: '/update_notification/',
+                type: 'post',
+                data:{
+                  id: d.target.id
+                },
+                headers: { "X-CSRFToken": token },
+                success: function(response){
+                  const msg = document.getElementById(`msg${d.target.id}`)
+                  msg.remove()
+                },
+                error: function(error){
+                  console.log('An error occured')
+                }
+              })
+            })
+
+          })
+
+        </script>
+
         <!-- CoreUI and necessary plugins-->
         <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
@@ -139,12 +177,10 @@
         <script src="{% static 'vendors/simplebar/js/simplebar.min.js' %}"></script>
         <!-- Plugins and scripts required by this view-->
         <script src="https://kit.fontawesome.com/82d49a62e0.js" crossorigin="anonymous"></script>
-        <script src="{% static 'vendors/chart.js/js/chart.min.js' %}"></script>
         <script src="{% static 'vendors/@coreui/chartjs/js/coreui-chartjs.js' %}"></script>
         <script src="{% static 'vendors/@coreui/utils/js/coreui-utils.js' %}"></script>
         <script src="{% static 'vendors/js/main.js' %}"></script>
-        <script>
-        </script>
-    
+        
+
       </body>
     </html>
