--- a/cryptocurrency/website/crypto/templates/crypto/home.html
+++ b/cryptocurrency/website/crypto/templates/crypto/home.html
@@ -130,8 +130,7 @@
                             <div class="caption">
                                 <h2>Investing and Lending</h2>
                                 <p></p>
-                                    We provides a variety of services to bring investors together with projects and
-                                    organizations in need of capital.
+                                    We provides a variety of services that bring investors and organizations in need of capital together.
                                 </p>
                             </div>
                         </div>
